# furyspeed

./: .coveragerc  .flake8  .gitattributes  .gitignore  AUTHORS.rst  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.md  README.rst  pyproject.toml  setup.cfg  setup.py
docs/source/: conf.py  index.rst  installation.rst  usage.rst
furyspeed/: __init__.py  _version.py
tools/: cmd.py  setup_helpers.py  version_helpers.py
