[build-system]
requires = ["setuptools>=45",
			      "setuptools_scm[toml]>=6.2",
			      "Cython>=0.29.24,<3.0",

            # We follow scipy for much of these pinnings
            # https://github.com/scipy/scipy/blob/main/pyproject.toml
            # numpy 1.19 was the first minor release to provide aarch64 wheels, but
            # wheels require fixes contained in numpy 1.19.2
            "numpy==1.19.2; python_version=='3.8' and platform_machine=='aarch64'",
            # aarch64 for py39 and py310 are covered by the default requirement below

            # arm64 on Darwin supports Python 3.8 and above requires numpy>=1.20.0
            "numpy==1.20.0; python_version=='3.8' and platform_machine=='arm64' and platform_system=='Darwin'",
            "numpy==1.20.0; python_version=='3.9' and platform_machine=='arm64' and platform_system=='Darwin'",
            # arm64 for py310 is covered by the default requirement below

            # default numpy requirements
            "numpy==1.17.3; python_version=='3.8' and (platform_machine!='arm64' or platform_system!='Darwin') and platform_machine!='aarch64' and platform_python_implementation != 'PyPy'",
            "numpy==1.19.3; python_version=='3.9' and (platform_machine!='arm64' or platform_system!='Darwin') and platform_python_implementation != 'PyPy'",
            "numpy==1.21.4; python_version=='3.10' and platform_python_implementation != 'PyPy'",

            # For Python versions which aren't yet officially supported,
            # we specify an unpinned NumPy which allows source distributions
            # to be used and allows wheels to be used as soon as they
            # become available.
            "numpy; python_version>='3.11'",
            "numpy; python_version>='3.8' and platform_python_implementation=='PyPy'",
            ]
build_backend = "setuptools.build_meta"

[project]
name = "FURYSPEED"
license = {file = "LICENSE"}
description = """
FURY addon providing optimized functions
"""

maintainers = [
    {name = "FURY Developers", email = "fury@python.org"},
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.18.5",
]
readme = "README.rst"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: C",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS",
]
dynamic = ['version', 'authors', ]

[tool.setuptools_scm]
write_to = "furyspeed/version.py"
git_describe_command = "git describe --dirty --tags --long --match v* --first-parent"

[tool.black]
line-length = 115
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist

  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/data
)/
'''
