[metadata]
name = FURYSPEED
url = https://fury.gl
download_url = https://github.com/fury-gl/furyspeed
description = a FURY addon providing optimized functions
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
author = FURY Developers
author_email = fury@python.org
maintainer = Serge Koudoro
maintainer_email = fury@python.org
license = BSD 3-clause
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Environment :: MacOS X
    Intended Audience :: Science/Research/Scientific Visualization
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering :: Visualization
project_urls =
    Documentation = https://fury.gl
    Source = https://github.com/fury-gl/furyspeed
    Tracker = https://github.com/fury-gl/furyspeed/issues
platforms = OS Independent
provides =
    furyspeed

[options]
zip_safe = False
packages = find:
platforms = any
include_package_data = True
install_requires =
    bz2file
python_requires = >=3.7
setup_requires =
    setuptools_scm

[bdist_wheel]
universal = 1

[aliases]
test=pytest

; [options.entry_points]
; console_scripts =

[options.extras_require]
test =
    pytest >= 6.2.2
    pycodestyle
    pytest-cov
all =
    %(test)s

[flake8]
max-line-length = 100
ignore = D100,D101,D102,D103,D104,D105,D200,D201,D202,D204,D205,D208,D209,D210,D300,D301,D400,D401,D403,E24,E121,E123,E126,E226,E266,E402,E704,E731,F821,I100,I101,I201,N802,N803,N804,N806,W503,W504,W605
exclude =
    *test*
    *sphinx*
    furyspeed/externals/*
    */__init__.py